# my_accounting

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
apps/ai/: apps.py
apps/ai_parser/: apps.py
apps/finances/management/commands/: setup_accounts.py
apps/finances/migrations/: 0001_initial.py
apps/finances/models/: __init__.py  account.py  book.py  journal_entry.py  transaction_detail.py
apps/finances/serializers/: account.py  book.py  journal_entry.py  transaction_detail.py
apps/finances/services/: journal_entry.py
apps/finances/views/: book.py  journal_entry.py
apps/schedules/: urls.py
apps/schedules/migrations/: 0001_initial.py
apps/schedules/models/: __init__.py  schedule.py  schedule_category.py
apps/schedules/serializers/: __init__.py  category.py  schedule.py
apps/schedules/views/: __init__.py  category.py  schedule.py
apps/users/: managers.py  urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  social_account.py  user.py
apps/users/serializers/: login.py  signup.py
apps/users/services/: auth_service.py
apps/users/views/: login.py  logout.py  signup.py
config/: settings.py  urls.py
config/settings/: base.py  development.py  developmnet.py
