[project]
name = "accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "openai>=1.108.1",
    "python-decouple>=3.8",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
]
