[project]
name = "accounting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "openai>=1.108.1",
    "psycopg2-binary>=2.9.10",
    "pytest-django>=4.11.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
]
